// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] blocks/<Answer /> (Draft) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH fFgWKo"
    width="1"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH Answer__Content-sc-1ccgtmi-0 dImgSX"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH dntGME"
      >
        <div
          class="Idcc__Container-owzimc-0 fWXTkt"
          currentitem="false"
          data-tip="A Labor Agreement Name"
        >
          IDCC: 1234
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
          />
        </div>
        <div
          class="Answer__ContentQuestion-sc-1ccgtmi-1 dbxdoF"
        >
          undefined) Who knows?
        </div>
      </div>
      <div
        class="Answer__ContentExtract-sc-1ccgtmi-2 kDLowz"
      >
        A prevalue
        …
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-bwzfXH Answer__Menu-sc-1ccgtmi-4 jsjXxT"
    >
      <button
        class="Link-c1jwt7-0 cIzIlt"
      >
        Annuler ma réponse
      </button>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<Answer /> (Draft) should match snapshot diff with a Labor Code generic reference 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH fFgWKo"
    width="1"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH Answer__Content-sc-1ccgtmi-0 dImgSX"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH dntGME"
      >
        <div
          class="Idcc__Container-owzimc-0 fWXTkt"
          currentitem="false"
          data-tip="A Labor Agreement Name"
        >
          IDCC: 1234
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
          />
        </div>
        <div
          class="Answer__ContentQuestion-sc-1ccgtmi-1 dbxdoF"
        >
          undefined) Who knows?
        </div>
      </div>
      <div
        class="Answer__ContentExtract-sc-1ccgtmi-2 Answer__ContentExtractRed-sc-1ccgtmi-3 kIVUGn"
      >
        Renvoyé au Code du travail.
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-bwzfXH Answer__Menu-sc-1ccgtmi-4 jsjXxT"
    >
      <button
        class="Link-c1jwt7-0 cIzIlt"
      >
        Annuler ma réponse
      </button>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<Answer /> (Draft) should match snapshot diff with a National Agreement generic reference 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH fFgWKo"
    width="1"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH Answer__Content-sc-1ccgtmi-0 dImgSX"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH dntGME"
      >
        <div
          class="Idcc__Container-owzimc-0 fWXTkt"
          currentitem="false"
          data-tip="A Labor Agreement Name"
        >
          IDCC: 1234
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
          />
        </div>
        <div
          class="Answer__ContentQuestion-sc-1ccgtmi-1 dbxdoF"
        >
          undefined) Who knows?
        </div>
      </div>
      <div
        class="Answer__ContentExtract-sc-1ccgtmi-2 Answer__ContentExtractRed-sc-1ccgtmi-3 kIVUGn"
      >
        Renvoyé à la convention collective nationale.
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-bwzfXH Answer__Menu-sc-1ccgtmi-4 jsjXxT"
    >
      <button
        class="Link-c1jwt7-0 cIzIlt"
      >
        Annuler ma réponse
      </button>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<Answer /> (Todo) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH fFgWKo"
    width="1"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH Answer__Content-sc-1ccgtmi-0 dImgSX"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH dntGME"
      >
        <div
          class="Idcc__Container-owzimc-0 fWXTkt"
          currentitem="false"
          data-tip="A Labor Agreement Name"
        >
          IDCC: 1234
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
          />
        </div>
        <div
          class="Answer__ContentQuestion-sc-1ccgtmi-1 dbxdoF"
        >
          12) Who knows?
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-bwzfXH Answer__Menu-sc-1ccgtmi-4 jsjXxT"
    >
      <button
        class="Link-c1jwt7-0 cIzIlt"
      >
        Renvoi au Code du travail
      </button>
      <button
        class="Link-c1jwt7-0 cIzIlt"
      >
        Renvoi à la CC nationale
      </button>
    </div>
  </div>
</div>
`;
